Style change to prevent buttons from being "selected" to copy on mobile devices

--- a/Content/main.css
+++ b/Content/main.css
@@ -178,11 +178,12 @@ ul {
 }
 
 .revealed {
-    background-color: #FFFFFF !important;   
+    background-color: white !important;
     border: darkslategrey 1px solid !important;    
 }
 
 .gameboard button {
+    background-color: buttonface;
     font-size: 14px;
     float: left;
     margin-right: 3px;
